tests/ui/opaque_not_sized.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
 --> $DIR/opaque_not_sized.rs:4:14
  |
4 |         type TypeR;
  |         -----^^^^^-
  |         |    |
  |         |    doesn't have a size known at compile-time
  |         required by this bound in `ffi::_::__AssertSized`
  |
  = help: within `TypeR`, the trait `std::marker::Sized` is not implemented for `str`
  = note: required because it appears within the type `TypeR`
